# py-identity

./: README.md  pyproject.toml
pydentity/: __init__.py  exc.py  identity_constants.py  identity_error.py  identity_error_describer.py  identity_options.py  identity_result.py  lookup_normalizer.py  models.py  rfc6238_authentication_service.py  role_manager.py  user_claims_principal_factory.py  user_confirmation.py  user_login_info.py  user_manager.py  utils.py
pydentity/abc/: __init__.py  data_protector.py  lookup_normalizer.py  password_hasher.py  stores.py  token_provider.py  user_claims_principal_factory.py  user_confirmation.py  validators.py
pydentity/contrib/sqlalchemy/: __init__.py  fields.py  models.py
pydentity/contrib/sqlalchemy/base/: abstract.py  model.py
pydentity/contrib/sqlalchemy/stores/: role_store.py  user_store.py
pydentity/contrib/tortoise/: __init__.py  fields.py  models.py
pydentity/contrib/tortoise/base/: abstract.py  model.py
pydentity/contrib/tortoise/stores/: __init__.py  role_store.py  user_store.py
pydentity/encryption/: __init__.py  data_protectors.py  personal_data_protector.py
pydentity/password_hashers/: README.md  __init__.py  _password_hashers.py  hashers.py  result.py
pydentity/resources/: __init__.py
pydentity/security/: claims.py
pydentity/token_providers/: README.md  __init__.py  authenticator.py  dataprotector.py  totp.py
pydentity/validators/: README.md  __init__.py  password_validator.py  role_validator.py  user_validator.py
tests/: models.py  test_lookup_normalizer.py  test_utils.py  utils.py
tests/contrib/sqlalchemy/: conftest.py  test_role_store.py  test_user_store.py
tests/contrib/tortoise/: conftest.py  test_role_store.py  test_user_store.py
tests/encryption/: test_data_protectors.py
tests/password_hashers/: test_password_hashers.py
tests/security/: test_claims.py
tests/token_providers/: conftest.py  test_authenticator_token_provider.py  test_data_protector_token_provider.py  test_totp_security_stamp_token_providers.py
tests/validators/: conftest.py  test_password_validator.py  test_role_validator.py  test_user_validator.py
